# ParallelProgramming

./: .gitignore
lab1/: CMakeLists.txt  Time counting opp_lab1.xlsx  Unknown.clog2  Unknown.slog2  build.sh  err-clu-demo.txt  main  main.c  mpe-build.sh  out-clu-demo.txt  run.sh  Отчет 1.docx
lab2/: CMakeLists.txt  Time counting opp_lab2.xlsx  build1.sh  build2.sh  main.c  main1.c  main2.c  run1.sh  run2.sh  schedule исследование.xlsx  Отчет 2.docx
lab3/: CMakeLists.txt  build.sh  main.c  matrix_multiplying.c  plan  run.sh
lab4/: CMakeLists.txt  build.sh  jacobi_method.c  jacobi_method.clog2  jacobi_method.slog2  mpe-build.sh
lab5/: CMakeLists.txt  main.cpp  main_no_balance.cpp  utils.h
